C-Corp / S-Corp correction

--- a/Nebraska-CCorp.html
+++ b/Nebraska-CCorp.html
@@ -35,7 +35,7 @@
                             But first, are you ready to incorporate? It is advised that you should incorporate when you anticipate taking investments or when your business approaches material size or complexity.
                         </p>
                         <p class="GDF-steps_modal_text">
-                            Typically, “material size” means a business with revenue above $100,000. Once you know you’re ready, you have the option between choosing to classify your business as a C-corporation or an S corporation. While S corps used to be the way to go for small businesses, thanks to the 2017 Tax Cuts and Jobs Act, C-corps are now often recommended for smaller businesses due to lower corporate tax rates. Now, S corps are sometimes advisable for larger businesses. But keep in mind that C-corps give you more options to expand and raise money, which can be very beneficial to a larger business. You may want to discuss the differences with a financial advisor or lawyer who can help break down all of the costs to help you assess what will work best for you.
+                            Typically, “material size” means a business with revenue above $100,000. Once you know you’re ready, you have the option between choosing to classify your business as a C-corporation or an S-Corporation. While S-Corps used to be the way to go for small businesses, thanks to the 2017 Tax Cuts and Jobs Act, C-corps are now often recommended for smaller businesses due to lower corporate tax rates. Now, S-Corps are sometimes advisable for larger businesses. But keep in mind that C-corps give you more options to expand and raise money, which can be very beneficial to a larger business. You may want to discuss the differences with a financial advisor or lawyer who can help break down all of the costs to help you assess what will work best for you.
                         </p>
                         <p class="GDF-steps_modal_text">
                             Whether you choose to structure your business entity as a C or S-Corporation will determine how much you’ll pay in taxes, the ways you’re permitted to raise money, and the ease with which you can expand as your business grows. The standard and most common type of corporation is a C-Corporation. In fact, a C-Corp is the default type of corporation. When you initially incorporate, your company will become a standard C-Corp, and only after you file the necessary forms can you be classified as an NE S-Corp for federal tax purposes.
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <p class="GDF-steps_modal_text">
-                        How do you know which type of corporation you want to register your business as when they are both so similar? Both types of corporations offer owners protection from individual liability, so shareholders (and directors, officers, and employees) are typically not personally responsible for business debts. C-Corps and S-Corps require similar paperwork. In addition, both are owned by shareholders, have a Board of Directors with annual meetings, and are managed by executive officers. It is also a requirement that both types of corporations pay annual fees, set up bylaws, and issue stock. Basically, an S corporation is the legal equivalent of a regular C-Corporation. Both have the same rights. They just pays taxes differently.
+                        How do you know which type of corporation you want to register your business as when they are both so similar? Both types of corporations offer owners protection from individual liability, so shareholders (and directors, officers, and employees) are typically not personally responsible for business debts. C-Corps and S-Corps require similar paperwork. In addition, both are owned by shareholders, have a Board of Directors with annual meetings, and are managed by executive officers. It is also a requirement that both types of corporations pay annual fees, set up bylaws, and issue stock. Basically, an S-Corporation is the legal equivalent of a regular C-Corporation. Both have the same rights. They just pays taxes differently.
                     </p>
                     <p class="GDF-steps_modal_text">
                         But why opt for a C-Corp? What are the benefits of setting up your Nebraska business as a C-Corp?
@@ -80,7 +80,7 @@
                             The opportunity to issue shares of stock to increase the value of your business. Unlike an S-Corp that permits only 100 shareholders, there is no limit for C-corps. Additionally, a C-Corp has no limits on who or what can be a shareholder (meaning other businesses can be shareholders).
                         </li>
                         <li class="GDF-steps_modal_text">
-                            Multiple classes of stock, while S corporations can only have one class of stock.
+                            Multiple classes of stock, while S-Corporations can only have one class of stock.
                         </li>
                         <li class="GDF-steps_modal_text">
                             A low 15% corporate income tax on the first $50,000 of income that your C-corporation brings in.
@@ -89,10 +89,10 @@
                             The ability to reinvest profits in your corporation at a lower tax rate.
                         </li>
                         <li class="GDF-steps_modal_text">
-                            More potential customers if you one day decide to sell your C-Corp. C-corps can be owned by other corporations, LLCs, or trusts, while an S-Corp can’t be owned by a C-Corp, other S corps, LLCs, general partnerships, or most trusts.
+                            More potential customers if you one day decide to sell your C-Corp. C-corps can be owned by other corporations, LLCs, or trusts, while an S-Corp can’t be owned by a C-Corp, other S-Corps, LLCs, general partnerships, or most trusts.
                         </li>
                         <li class="GDF-steps_modal_text">
-                            Tax-deductible business expenses such as medical reimbursement plans and premiums for health, long-term care and disability insurance (as long as the fringe benefits are equally available to all employees), while S corps do not. Individual shareholders in S corps can deduct their expenses from their income but at the same time have to declare these same benefits as income.
+                            Tax-deductible business expenses such as medical reimbursement plans and premiums for health, long-term care and disability insurance (as long as the fringe benefits are equally available to all employees), while S-Corps do not. Individual shareholders in S-Corps can deduct their expenses from their income but at the same time have to declare these same benefits as income.
 
                         </li>
                         <li class="GDF-steps_modal_text">
